<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary"
    android:layout_gravity="center"
    android:focusable="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="40dp"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView android:src="@drawable/chat"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:paddingRight="60dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="40sp"
            android:layout_marginBottom="80dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:theme="@style/editText">
            <EditText android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/white"
                android:hint="@string/screen_name"
                android:nextFocusUp="@id/nameInput"
                android:nextFocusLeft="@id/nameInput"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/completeSetupButton"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textSize="16sp"
            android:text="@string/complete_setup"/>

    </LinearLayout>
</LinearLayout>