<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="final_project.oschat.MainActivity"
    tools:showIn="@layout/activity_main"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/createGroupWidget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundbox_accent"
            android:elevation="4dp"
            android:focusable="true"
            android:orientation="vertical"
            android:layout_margin="30dp"
            android:padding="30dp"
            android:paddingBottom="0dp"
            android:layout_marginBottom="0dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="40dp"
                android:paddingTop="10dp"
                android:text="@string/enter_a_unique_group_name"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp"
                android:theme="@style/editText">

                <EditText
                    android:id="@+id/newGroupName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/group_name"
                    android:textColor="@color/white"/>

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:padding="0dp">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/createButton"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/check"
                    android:drawableTint="@color/white"
                    android:text="@string/create"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/addGroupWidget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/roundbox_primary"
            android:elevation="4dp"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="30dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="40dp"
                android:paddingTop="10dp"
                android:text="@string/add_an_existing_group"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp"
                android:theme="@style/editText">

                <EditText
                    android:id="@+id/addGroupName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/group_name"
                    android:textColor="@color/white"/>

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:padding="0dp">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/addButton"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/check"
                    android:drawableTint="@color/white"
                    android:text="@string/add_group"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:paddingTop="0dp"
            android:text="@string/my_groups"
            android:textAlignment="textStart"
            android:textColor="@color/nav"
            android:textSize="35sp" />




    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
