<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:id="@+id/chatView">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/chatCreatorToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_a_unique_group_name"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textAlignment="textStart"
            android:paddingBottom="80dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/chatName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/group_name"
                android:padding="20dp" />

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:padding="20dp">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/createButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/check"
                android:drawableTint="@color/colorPrimary"
                android:text="@string/create"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <ProgressBar
            android:visibility="invisible"
            android:id="@+id/progressCircle"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:indeterminate="true"
            android:padding="40dp"/>

        <ImageView
            android:visibility="gone"
            android:id="@+id/progressCheck"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:indeterminate="true"
            android:src="@drawable/check_plain"
            android:tint="@color/colorPrimary"
            android:contentDescription="@string/group_creation_completed" />

    </LinearLayout>




</LinearLayout>